tests/ui/parser/recover-enum2.stderr
error: expected type, found `{`
  --> $DIR/recover-enum2.rs:6:18
   |
LL |         Var3 {
   |         ---- while parsing this struct
LL |             abc: {},
   |                  ^ expected type

error: expected one of `!`, `(`, `)`, `+`, `,`, `::`, or `<`, found `{`
  --> $DIR/recover-enum2.rs:25:22
   |
LL |             Nope(i32 {})
   |                      ^ expected one of 7 possible tokens

error: aborting due to 2 previous errors

